@@ -10,9 +10,7 @@
 package org.elasticsearch.test.entitlements;
 
 import org.elasticsearch.client.Request;
-import org.elasticsearch.test.ESTestCase;
 import org.elasticsearch.test.cluster.ElasticsearchCluster;
-import org.elasticsearch.test.cluster.local.distribution.DistributionType;
 import org.elasticsearch.test.rest.ESRestTestCase;
 import org.junit.ClassRule;
 
@@ -20,21 +18,13 @@ import java.io.IOException;
 
 import static org.hamcrest.Matchers.containsString;
 
-@ESTestCase.WithoutSecurityManager
 public class EntitlementsIT extends ESRestTestCase {
-
-    private static final String ENTITLEMENT_BRIDGE_JAR_NAME = System.getProperty("tests.entitlement-bridge.jar-name");
 
     @ClassRule
     public static ElasticsearchCluster cluster = ElasticsearchCluster.local()
-        .distribution(DistributionType.INTEG_TEST)
         .plugin("entitlement-qa")
         .systemProperty("es.entitlements.enabled", "true")
         .setting("xpack.security.enabled", "false")
-        .jvmArg("-Djdk.attach.allowAttachSelf=true")
-        .jvmArg("-XX:+EnableDynamicAgentLoading")
-        .jvmArg("--patch-module=java.base=lib/entitlement-bridge/" + ENTITLEMENT_BRIDGE_JAR_NAME)
-        .jvmArg("--add-exports=java.base/org.elasticsearch.entitlement.bridge=org.elasticsearch.entitlement")
         .build();
 
     @Override
